--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </section>
     <section class="section" id="projects">
       <h2>Featured Projects</h2>
+      <p><a href="https://rankkit.app" target="_blank">RankKit</a> – Job search optimization SaaS platform built with React, TypeScript, and Firebase. Helps job seekers optimize resumes for ATS systems, generate cover letters, practice interviews, and manage their entire job search workflow. Features AI-powered tools, document version control, and social media SEO optimization.</p>
+      <p><a href="https://github.com/ayersdecker/gameplan" target="_blank">GamePlan</a> – Social Platform that helps promote going out and joining events with friends without the commitment of planning.</p>
       <p><a href="https://github.com/ayersdecker/Loficus" target="_blank">Loficus</a> – Desktop lofi music streaming app. Designed for productivity and relaxation, with a custom UI and curated playlists.</p>
       <p><a href="https://github.com/ayersdecker/TPLinkControl-Console" target="_blank">TP-Link Cloud Console</a> – A tool that allows users to control TP-Link devices (unofficially) from a simple interface. Built for research and automation.</p>
       <p><a href="https://github.com/ayersdecker/Solve.AI-App" target="_blank">Solve.AI</a> – Mobile app using OpenAI GPT-4 to solve problems and answer questions. Created as a capstone project for college.</p>
